# mentoringhub

./: .gitignore  Makefile  README.md  docker-compose.yml  livekit.yaml  package-lock.json
backend/: .env_sample  Dockerfile  entrypoint  export.sh  gunicorn.conf.py  pyproject.toml  requirements.txt
backend/core/: asgi.py  consumer.py  graphiql.html  schema.py  settings.py  urls.py
backend/graphql_auth/migrations/: 0002_alter_userstatus_id.py
backend/meetings/: admin.py  models.py  schema.py  views.py
backend/meetings/graphql/: mutations.py  query.py  types.py
backend/meetings/migrations/: 0001_initial.py  0002_alter_meeting_cover_image.py  0002_meeting_users.py  0003_remove_meeting_token.py  0004_auto_20220923_1340.py  0005_alter_meeting_status.py
backend/mentorships/: admin.py  apps.py  models.py  schema.py
backend/mentorships/graphql/: mutations.py  query.py  subscriptions.py  types.py
backend/mentorships/migrations/: 0001_initial.py  0002_auto_20220921_1405.py  0003_auto_20220921_1412.py  0004_auto_20220924_1127.py
backend/recommenders/: apps.py  schema.py  views.py
backend/recommenders/graphql/: query.py
backend/socialauth/: apps.py  urls.py  views.py
backend/templates/email/: activation_email.html
backend/users/: admin.py  models.py  schema.py
backend/users/graphql/: mutations.py  query.py  types.py
backend/users/migrations/: 0001_initial.py  0002_alter_userprofile_role.py  0003_userprofile_languages.py  0004_auto_20220922_2101.py  0005_auto_20220923_0022.py  0006_auto_20220923_0107.py  0007_alter_userprofile_country.py
client/: .env_sample  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client/src/: App.vue  main.ts
webrtc/: .dockerignore  .env_sample  .gitignore  Dockerfile  Makefile  entrypoint.sh  export.sh  package.json  tsconfig.json
webrtc/prisma/: schema.prisma
webrtc/src/: index.ts
(+103 files in other folders)
